# ml-api-python-template

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: config
artifacts/: model.joblib.dvc
config/: .gitignore  config.py  example_mlflow.config  logging.config
models/: .gitignore  model.joblib.dvc  params.json  winequality_features.json  winequality_model.joblib.dvc  winequality_performance.json  winequality_scaler.joblib.dvc
template/: main.py  utils.py
template/data/: data.py
template/models/: eval.py  train.py
