[tool.poetry]
name = "ml-api-python-template"
version = "0.1.0"
description = "A template repository for AI/ML Python projects for models with an API"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
