[tool.poetry]
name = "ml-api-python-template"
version = "0.1.0"
description = "A template repository for AI/ML Python projects for models with an API"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.8.3"
typer = "^0.4.0"
rich = "^10.13.0"
mlflow = "^1.21.0"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.10b0"
pydocstyle = "^6.1.1"
coverage = "^6.1.1"
great-expectations = "^0.13.41"
pylint = "^2.11.1"
mypy = "^0.910"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
